--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,7 @@
             ]
         },
         "branch-alias": {
-            "dev-main": "1.1"
+            "dev-main": "1.0-dev"
         }
     },
     "scripts": {
